Shortcut dropdown fix
- Fixed error when no shortcuts in platform
- MUCH better spacing/sizing fix for shortcuts dropdown. Works great with all skins.
- Fixed shortcuts dropdown not showing Add button for new shortcuts (was hidden in overflow)

--- a/TcNo-Acc-Switcher-Server/wwwroot/css/UI.scss
+++ b/TcNo-Acc-Switcher-Server/wwwroot/css/UI.scss
@@ -449,13 +449,17 @@ button .caret, .button .caret {
     position: absolute;
     z-index: 500;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    display: flex;
-    flex-wrap: wrap;
     min-width: 36px;
     min-height: 36px;
     max-height: 260px;
-    overflow-x: hidden;
-    overflow-y: auto;
+
+    .shortcutDropdownItems {
+        display: flex;
+        flex-wrap: wrap;
+        overflow-x: hidden;
+        overflow-y: auto;
+        max-height: inherit;
+    }
 
     #btnOpenShortcutFolder {
         position: absolute;
